--- a/css/style3.css
+++ b/css/style3.css
@@ -5,7 +5,7 @@
 h1{
 	text-align:center;
      background-color: #2AA5A0;
-    background-image: linear-gradient(90deg, #e96107, #d3a35b);
+    background-image: linear-gradient(#F6B107, #EADD0E, #F4E93D);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-family:cursive; 
