--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: sans-serif;
     background-color: rgb(138, 130, 136);
@@ -89,7 +88,7 @@ h1 {
 }
 
 footer {
-    background-color: rgb(221, 112, 112);
+    background-color: #29a552;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -147,4 +146,7 @@ li{
     margin: 100px;
     transform:scale(3);
     transition:6s linear;
+}
+.hata{
+    text-align: center;
 }
