--- a/css/style3.css
+++ b/css/style3.css
@@ -23,7 +23,11 @@ main{
 	font-family: fantasy;
 	color: rgb(255, 255, 255);
 	background-color: rgb(207, 209, 184);
-    font-size: 15px;
+        font-size: 15px;
+	width:100%;
+		
+	
+		
 }
 textarea{
 	font-size: 25px;
