--- a/css/style2.css
+++ b/css/style2.css
@@ -34,9 +34,9 @@ nav {
 .stefania{
     text-align: center;
 }
-img.animate1:hover {
-    border:5px solik blue;
-    width:290px;
+ruch:hover {
+    border:5px solid blue;
+    width:500px;
     height:330px;
     
 }
