--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,4 @@
+
 body{
     background-color:rgb(207, 209, 184);
 }
@@ -34,9 +35,9 @@ nav {
 .stefania{
     text-align: center;
 }
-ruch:hover {
+.ruch:hover {
     border:5px solid blue;
-    width:500px;
-    height:330px;
-    
+    width:280px;
+    height:280px;
+  
 }
