--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: sans-serif;
     background-color: rgb(138, 130, 136);
@@ -75,6 +76,8 @@ h1 {
     text-align: center;
     padding: 10px 75px 10px 75px;
     display: block;
+    opacity:0.5;
+    border-radius: 10px;
 }
 
 .full-image {
@@ -149,6 +152,17 @@ li{
 }
 .hata{
     text-align:center;
-    border:13px solid #29a552;
+    border:3px solid #29a552;
     
+}
+.article-but:hover{
+    opacity:1;
+    border:4px solid black;
+    
+}
+.ruch:hover{
+    width:415px;
+    height:315px;
+    border:7px solid lightgreen;
+
 }
